Correct index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
        <li><a href="./recipes/chicken_tetrazzini.html"> Chicken Tetrazzini </a></li>
-       <li><a href="./recipes/chicken_pasta.html"> Chicken Paata </a></li>
+       <li><a href="./recipes/chicken_pasta.html"> Chicken Pasta </a></li>
        <li><a href="./recipes/chicken_mushroom_fettuccine.html"> Chicken Mushroom Fettuccine </a></li>
        <li><a href="./recipes/chicken_orzo.html"> Chicken Orzo </a></li>
     </ul>
